--- a/Compiling.mediawiki
+++ b/Compiling.mediawiki
@@ -135,6 +135,10 @@ With no extra arguments, release build will be compiled. If you need the debug r
  ./hm.sh conf -g1 [-d] # Use -d to build a debug version.
  ./hm.sh build [-d]
 
+Note: This project uses Qt4. If you have multiple versions of Qt installed, your system will default to the newest one. If that is Qt5, you can override this by specifying the env variable QT_SELECT=4, like so:
+
+QT_SELECT=4 ./hm.sh conf -g1
+
 After compiling, the binaries can be found in the ''bin'' directory in the root of the source tree (not in the build directory).
 
 ==Building installers==
