--- a/_Sidebar.md.mediawiki
+++ b/_Sidebar.md.mediawiki
@@ -11,6 +11,7 @@
 * [[Android client]]
 * [[Conflicting software]]
 * [[Archived content]]
+* [[Sending Logs]
 * [http://synergy-project.org/wiki/User Legacy Wiki]
 
 ==Developer==
