--- a/_Sidebar.md.mediawiki
+++ b/_Sidebar.md.mediawiki
@@ -15,6 +15,7 @@
 * [[Startup]]
 * [[Version 1.3]]
 * [[Use as a KVM]]
+* [[Conflicting Software]]
 * [http://synergy-project.org/wiki/User Legacy Wiki]
 
 ==Developer==
