--- a/_Sidebar.md.mediawiki
+++ b/_Sidebar.md.mediawiki
@@ -16,6 +16,7 @@
 * [[Version 1.3]]
 * [[Use as a KVM]]
 * [[Conflicting Software]]
+* [[Related Software]]
 * [http://synergy-project.org/wiki/User Legacy Wiki]
 
 ==Developer==
