--- a/Command-line.mediawiki
+++ b/Command-line.mediawiki
@@ -113,3 +113,47 @@ The argument for ''address'' is of the form: <pre>[<hostname>][:<port>]</pre>. T
 If no configuration file pathname is provided then the first of the following to load successfully sets the configuration:
  /root/.synergy.conf
  /etc/synergy.conf</nowiki>
+
+==Command Line for synergys==
+
+taken from a linux system
+
+ <nowiki>$ synergys --help
+Usage: synergys [--address <address>] [--config <pathname>] [--display <display>] [--no-xinitthreads] [--daemon|--no-daemon] [--name <screen-name>] [--restart|--no-restart] [--debug <level>]
+
+Start the synergy mouse/keyboard sharing server.
+
+  -a, --address <address>  listen for clients on the given address.
+  -c, --config <pathname>  use the named configuration file instead.
+  -d, --debug <level>      filter out log messages with priority below level.
+                             level may be: FATAL, ERROR, WARNING, NOTE, INFO,
+                             DEBUG, DEBUG1, DEBUG2.
+  -n, --name <screen-name> use screen-name instead the hostname to identify
+                             this screen in the configuration.
+  -1, --no-restart         do not try to restart on failure.
+*     --restart            restart the server automatically if it fails.
+  -l  --log <file>         write log messages to file.
+      --no-tray            disable the system tray icon.
+      --enable-drag-drop   enable file drag & drop.
+      --display <display>  connect to the X server at <display>
+      --no-xinitthreads    do not call XInitThreads()
+  -f, --no-daemon          run in the foreground.
+*     --daemon             run as a daemon.
+  -h, --help               display this help and exit.
+      --version            display version information and exit.
+
+* marks defaults.
+
+The argument for --address is of the form: [<hostname>][:<port>].  The
+hostname must be the address or hostname of an interface on the system.
+The default is to listen on all interfaces.  The port overrides the
+default port, 24800.
+
+If no configuration file pathname is provided then the first of the
+following to load successfully sets the configuration:
+  /root/.synergy.conf
+  /etc/synergy.conf</nowiki>
+
+----
+
+[[Command line]]
