--- a/Command-line.mediawiki
+++ b/Command-line.mediawiki
@@ -157,3 +157,45 @@ following to load successfully sets the configuration:
 ----
 
 [[Command line]]
+
+== Synergyc Command line options ==
+
+Taken from linux system
+
+ <nowiki>$ synergyc --help
+Usage: synergyc [--yscroll <delta>] [--display <display>] [--no-xinitthreads] [--daemon|--no-daemon] [--name <screen-name>] [--restart|--no-restart] [--debug <level>] <server-address>
+
+Connect to a synergy mouse/keyboard sharing server.
+
+  -d, --debug <level>      filter out log messages with priority below level.
+                             level may be: FATAL, ERROR, WARNING, NOTE, INFO,
+                             DEBUG, DEBUG1, DEBUG2.
+  -n, --name <screen-name> use screen-name instead the hostname to identify
+                             this screen in the configuration.
+  -1, --no-restart         do not try to restart on failure.
+*     --restart            restart the server automatically if it fails.
+  -l  --log <file>         write log messages to file.
+      --no-tray            disable the system tray icon.
+      --enable-drag-drop   enable file drag & drop.
+      --display <display>  connect to the X server at <display>
+      --no-xinitthreads    do not call XInitThreads()
+  -f, --no-daemon          run in the foreground.
+*     --daemon             run as a daemon.
+      --yscroll <delta>    defines the vertical scrolling delta, which is
+                             120 by default.
+  -h, --help               display this help and exit.
+      --version            display version information and exit.
+
+* marks defaults.
+
+The server address is of the form: [<hostname>][:<port>].  The hostname
+must be the address or hostname of the server.  The port overrides the
+default port, 24800.
+
+synergyc: a server address or name is required
+Try `synergyc --help' for more information.</nowiki>
+
+
+----
+
+[[Command line]]
