--- a/Compiling.mediawiki
+++ b/Compiling.mediawiki
@@ -26,6 +26,7 @@ Note: If you want to change the installed directory of Bonjour SDK, please doubl
 Note: You may need to add your QT directory to your PATH environment variable, especially for the qmake and mingw32-make. make sure:
 * In the Path, add X:\Qt\2010.02\qt\bin before others (to avoid lib conflict).
 * add D:\Qt\2010.02\bin;D:\Qt\2010.02\mingw\bin into the Path.
+Note: You may need to set you <code>QMAKESPEC</code> environmental variable. the correct value for this is <code>%QTDIR%\mkspecs\win32-g++</code>
 
 ===Windows 64-bit===
 
