--- a/Compiling.mediawiki
+++ b/Compiling.mediawiki
@@ -26,7 +26,7 @@ Note: If you want to change the installed directory of Bonjour SDK, please doubl
 Note: You may need to add your QT directory to your PATH environment variable, especially for the qmake and mingw32-make. make sure:
 * In the Path, add X:\Qt\2010.02\qt\bin before others (to avoid lib conflict).
 * add D:\Qt\2010.02\bin;D:\Qt\2010.02\mingw\bin into the Path.
-Note: You may need to set you <code>QMAKESPEC</code> environmental variable. the correct value for this is <code>%QTDIR%\mkspecs\win32-g++</code>
+Note: You may need to set your <code>QMAKESPEC</code> environmental variable. the correct value for this is <code>%QTDIR%\mkspecs\win32-g++</code>
 
 ===Windows 64-bit===
 
@@ -149,3 +149,4 @@ After compiling, the binaries can be found in the ''bin'' directory in the root 
 
 ==Building installers==
 Use the <code>hm package [os]</code> command to build installers. On Windows the [http://wixtoolset.org/ WiX Toolset] is required.
+Note: On Windows, when using Visual C++ 2010 Express, it does not provide the Merge Module needed for packaging.
