--- a/Conflicting-software.mediawiki
+++ b/Conflicting-software.mediawiki
@@ -12,3 +12,5 @@ These are applications known to either interfere with Synergy's operation, or Sy
 * World of Warcraft and other fullscreen games (mouse movement goes crazy)
 * Ableton Live (knob and slider movement for native UI controls is broken)
 * GuardedID (a keylogging prevention app)
+* Adobe Acrobat XI Pro
+* Wiznote
