--- a/Startup.mediawiki
+++ b/Startup.mediawiki
@@ -8,7 +8,7 @@ The official way is to use the Windows service feature in 1.4 which works with W
 
 You can use a [[Mac plist startup|plist through launchd]]. There's also an example of this method in the source code.
 
-You can use [[Mac plist startup#OS X Server|Login Items in the Accounts control panel]]. 1.4.12 w/ encryption - 8/21/13 [[User:Kitz | Kitz]]
+You can use [[Mac plist startup#OS_X_Server|Login Items in the Accounts control panel]]. 1.4.12 w/ encryption - 8/21/13 [[User:Kitz | Kitz]]
 
 ===Linux===
 
