Update git repo URLs since the old repo now just contains a README pointing you at the new one

--- a/Source-Code.mediawiki
+++ b/Source-Code.mediawiki
@@ -2,19 +2,17 @@
 
 ==Browse online==
 
-* Github: [http://github.com/synergy/synergy/ Github Repo]
-* WebSVN (legacy): [http://synergy-foss.org/code/ Browse], [http://synergy-foss.org/code/log.php?repname=synergy Log]
-* SourceForge (legacy): [http://synergy2.svn.sourceforge.net/viewvc/synergy2/ Browse], [http://synergy2.svn.sourceforge.net/viewvc/synergy2/branches/?view=log Log]
+* Github: [http://github.com/symless/synergy/ Github Repo]
 
 ==Downloading source zip==
 
-Github source [https://github.com/synergy/synergy/archive/master.zip zip of master (Beta)].
-You can also get [https://github.com/synergy/synergy/tags zips of releases].
+Github source [https://github.com/symless/synergy/archive/master.zip zip of master (Beta)].
+You can also get [https://github.com/symless/synergy/tags zips of releases].
 
 ==Download from repository==
 
 Use this command to anonymously check out the latest project source code:
- git clone https://github.com/synergy/synergy.git synergy
+ git clone https://github.com/symless/synergy.git synergy
  cd synergy
 
 Identify which version of Synergy you want to build:
