--- a/Text-Config.mediawiki
+++ b/Text-Config.mediawiki
@@ -184,6 +184,9 @@ Note that links do not have to be symmetrical; for instance, here the edge betwe
 * <code>relativeMouseMoves = {true|false}</code>
 : If set to ''true'' then secondary screens move the mouse using relative rather than absolute mouse moves when and only when the cursor is locked to the screen (by ''Scroll Lock'' or a configured hot key). This is intended to make Synergy work better with certain games. If set to ''false'' or not set then all mouse moves are absolute.
 
+* <code>win32KeepForeground = {true|false}</code>
+: If set to ''true'' (the default), Synergy will grab the foreground focus on a Windows server (thereby putting all other windows in the background) upon switching to a client. If set to ''false'', it will leave the currently foreground window in the foreground. Synergy grabs the focus to avoid issues with other apps interfering with Synergy's ability to read the hardware inputs. 
+
 * <code>keystroke(key) = actions</code>
 : Binds the ''key'' combination key to the given ''actions''. ''key'' is an optional list of modifiers (''shift'', ''control'', ''alt'', ''meta'' or ''super'') optionally followed by a character or a key name, all separated by + (plus signs). You must have either modifiers or a character/key name or both. See below for [[Text Config#Keynames|valid key names]] and [[Text Config#Actions|actions]].
 : Keyboard hot keys are handled while the cursor is on the primary screen and secondary screens. Separate actions can be assigned to press and release.
