Updated Release (mediawiki)

--- a/Release.mediawiki
+++ b/Release.mediawiki
@@ -1,7 +1,7 @@
 == Development ==
 '''Note:''' Takes approx 1-2 hours (depending on testing).
 
-# Create release branch (e.g. 1.2.3-stable)
+# Create release branch (e.g. v1.2.3)
 # Copy [https://github.com/synergy/synergy/milestones milestone] to ChangeLog
 # Ensure version number in CMakeLists.txt is correct
 # Ensure stage name in CMakeLists.txt is correct (stable, beta, etc)
