--- a/Compiling.mediawiki
+++ b/Compiling.mediawiki
@@ -8,11 +8,10 @@ This guide is for Synergy version 1.3.5 and above. First you need to download th
 
 These are for Windows XP SP3 (the earliest Windows supported) and above.
 
-* Visual Studio 2010 or Visual C++ Express 2010
-* Visual Studio 2010 SP1
+* Visual Studio 2015
+* Qt 5.6
 * [http://www.cmake.org/cmake/resources/software.html CMake 2.8]
 * [http://www.python.org/download/ Python 2.x]
-* [http://synergy-foss.org/mirror/qt-sdk-win-opensource-2010.02.exe Qt SDK 2010.02]
 * [http://wixtoolset.org/releases/ Wix v3.8]
 * [https://developer.apple.com/downloads/?q=Bonjour%20SDK%20for%20Windows Bonjour SDK for Windows]
 * Command line [https://git-scm.com/downloads git] in your PATH.
@@ -24,15 +23,12 @@ Using Python 3.x will result in syntax errors as print became a function rather 
 Note: If you want to change the installed directory of Bonjour SDK, please double check the BONJOUR_SDK_HOME environment variable after installation.
 
 Note: You may need to add your QT directory to your PATH environment variable, especially for the qmake and mingw32-make. make sure:
-* In the Path, add X:\Qt\2010.02\qt\bin before others (to avoid lib conflict).
-* add D:\Qt\2010.02\bin;D:\Qt\2010.02\mingw\bin into the Path.
-Note: You may need to set your <code>QMAKESPEC</code> environmental variable. the correct value for this is <code>%QTDIR%\mkspecs\win32-g++</code>
+* add X:\Qt\5.6\mingw49_32\bin;X:\Qt\Tools\mingw492_32\bin into the Path.
+Note: You may need to set your <code>QMAKESPEC</code> environmental variable. the correct value for this is <code>X:\Qt\5.6\mingw49_32\mkspecs\win32-g++</code>
 
 ===Windows 64-bit===
 
 * All dependencies required for [[Compiling#Windows_x86|Windows x86]]
-* Visual Studio 2008 (64-bit) SP1 or Visual Studio 2005 (64-bit) SP1
-* 64-bit compiler extensions installed (you may need to re-run Visual Studio setup)
 
 ===Mac OS X===
 
