Updated Bonjour download link

--- a/Compiling.mediawiki
+++ b/Compiling.mediawiki
@@ -13,7 +13,7 @@ These are for Windows XP SP3 (the earliest Windows supported) and above.
 * [http://www.cmake.org/cmake/resources/software.html CMake 2.8]
 * [http://www.python.org/download/ Python 2.x]
 * [http://wixtoolset.org/releases/ Wix v3.8]
-* [https://developer.apple.com/downloads/?q=Bonjour%20SDK%20for%20Windows Bonjour SDK for Windows]
+* [https://developer.apple.com/download/more/?q=Bonjour%20SDK%20for%20Windows Bonjour SDK for Windows]
 * Command line [https://git-scm.com/downloads git] in your PATH.
 
 You may need to add your Python install directory to the end of your PATH environment variable <pre>(System --> Advanced System Settings --> Environment Variables)</pre> so that <code>hm</code> can be called from the command prompt.
