--- a/Compiling.mediawiki
+++ b/Compiling.mediawiki
@@ -83,7 +83,7 @@ If you already have [MacPorts], run:
  sudo port install cmake
 
 ===Ubuntu 10.04 to 15.10===
- sudo apt-get install cmake make g++ xorg-dev libqt4-dev libcurl4-openssl-dev libavahi-compat-libdnssd-dev libssl-dev
+ sudo apt-get install cmake make g++ xorg-dev libqt4-dev libcurl4-openssl-dev libavahi-compat-libdnssd-dev libssl-dev libx11-dev
 
 ===CentOS 6.5===
  su
