--- a/Compiling.mediawiki
+++ b/Compiling.mediawiki
@@ -135,8 +135,12 @@ With no extra arguments, release build will be compiled. If you need the debug v
  hm conf -g1
  hm build
 
-===Unix, Linux, Mac OS X===
+===Unix and Linux===
  ./hm.sh conf -g1 [-d] # Use -d to build a debug version.
+ ./hm.sh build [-d]
+
+===Mac OS X===
+ ./hm.sh conf -g1 [-d] --mac-sdk 10.11 --mac-identity Yosemite # Use -d to build a debug version and replace 10.11 / Yosemite with correct versions of your setup.
  ./hm.sh build [-d]
 
 Note: This project uses Qt4. If you have multiple versions of Qt installed, your system will default to the newest one. If that is Qt5, you can override this by specifying the env variable QT_SELECT=4, like so:
